k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: maidan
  labels:
    app.kubernetes.io/name: maidan
    app.kubernetes.io/part-of: maidan
